test/fixtures/mutating_webhook_configurations/ingress_hook.json
{
  "apiVersion": "v1",
  "items": [
    {
      "apiVersion": "admissionregistration.k8s.io/v1",
      "kind": "MutatingWebhookConfiguration",
      "metadata": {
        "creationTimestamp": "2020-08-04T19:49:44Z",
        "generation": 2,
        "name": "oauthboss-webhook-configuration",
        "resourceVersion": "3115431",
        "selfLink": "/apis/admissionregistration.k8s.io/v1/mutatingwebhookconfigurations/oauthboss-webhook-configuration",
        "uid": "7afce875-5175-430d-95aa-de8ec97f15b0"
      },
      "webhooks": [
        {
          "admissionReviewVersions": [
              "v1beta1"
          ],
          "clientConfig": {
              "caBundle": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwakNDQWJxZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFhTVJnd0ZnWURWUVFERXc5M1pXSm8KYjI5ckxXTmxjblF0WTJFd0hoY05NakF3T0RBME1UazBPVFExV2hjTk16QXdPREF5TVRrME9UUTFXakFhTVJndwpGZ1lEVlFRREV3OTNaV0pvYjI5ckxXTmxjblF0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFDOGs1MjNobEFsald4RitITk8wWk9qQTZ4MGNSa1RQVHdkZm9nK3JGOXZ3Y21XRTBFT3kyYlUKZ3BNRU5SQzVpVzRxS1pCYUJ6MEU1bXcvbWNjcGNrbXR1V05pODVML0hzUjVlbWR2aWdUamJYb0RMeWxEdjNMLwpRS [...]
              "service": {
                  "name": "oauthboss",
                  "namespace": "cloudbosses",
                  "path": "/oauthboss",
                  "port": 443
              }
          },
          "failurePolicy": "Ignore",
          "matchPolicy": "Exact",
          "name": "oauthboss.cloudbosses.admission.online.shopify.com",
          "namespaceSelector": {
              "matchExpressions": [
                  {
                      "key": "control-plane",
                      "operator": "DoesNotExist"
                  }
              ]
          },
          "objectSelector": {},
          "reinvocationPolicy": "Never",
          "rules": [
              {
                  "apiGroups": [
                      "extensions"
                  ],
                  "apiVersions": [
                      "v1beta1"
                  ],
                  "operations": [
                      "CREATE",
                      "UPDATE"
                  ],
                  "resources": [
                      "ingresses"
                  ],
                  "scope": "*"
              }
            ],
          "sideEffects": "Unknown",
          "timeoutSeconds": 30
        }
      ]
    }
  ],
  "kind": "List",
  "metadata": {
      "resourceVersion": "",
      "selfLink": ""
  }
}
