test/fixtures/mutating_webhook_configurations/ingress_hook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: ingress-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: ingress-hook
      namespace: test
      path: "/ingress-hook"
      port: 443
  failurePolicy: Ignore
  matchPolicy: Exact
  name: ingress-hook.hooks.admission.krane.com
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
    scope: "*"
  sideEffects: NoneOnDryRun
  timeoutSeconds: 1
