test/fixtures/mutating_webhook_configurations/secret_hook.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: secret-hook-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    service:
      name: secret-hook
      namespace: test
      path: "/secret-hook"
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: secret-hook.hooks.admission.krane.com
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - secrets
    scope: "*"
  sideEffects: NoneOnDryRun
  timeoutSeconds: 1
